subsetting income process to no college means for some regions there is a negative relation between average income level (q) and individual income. tried different specifications, this is robust. so be it. small edit in lyx to use tikz plot finally (figured it out in the end)

--- a/lyx/model.lyx
+++ b/lyx/model.lyx
@@ -8776,7 +8776,7 @@ name "tab:Regional-2-indiv-income"
 \begin_inset Float figure
 wide false
 sideways false
-status collapsed
+status open
 
 \begin_layout Plain Layout
 \noindent
@@ -8786,24 +8786,12 @@ status open
 
 \begin_layout Plain Layout
 
-%
+
 \backslash
 input{
 \backslash
 Dropbox/model/fit/income_profiles.tex}
 \end_layout
-
-\end_inset
-
-
-\end_layout
-
-\begin_layout Plain Layout
-\noindent
-\align center
-\begin_inset Graphics
-	filename ../../../Dropbox/research/mobility/output/model/fit/income_profiles.pdf
-	scale 80
 
 \end_inset
 
