--- a/lyx/model.lyx
+++ b/lyx/model.lyx
@@ -6240,6 +6240,60 @@ name "tab:MC-money"
 \end_layout
 
 \begin_layout Subsection
+Elasticities
+\end_layout
+
+\begin_layout Standard
+\begin_inset Float table
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\noindent
+\align center
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+input{
+\backslash
+Dropbox/model/fit/elasticities.tex}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+\begin_inset Caption Standard
+
+\begin_layout Plain Layout
+elasticities.
+\begin_inset CommandInset label
+LatexCommand label
+name "tab:elasticities"
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Subsection
 Why Do Owners Move Less?
 \end_layout
 
